--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,4 +5,4 @@ option('MPI_ROOT', type : 'string', description : 'root directory of OpenMPI')
 option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
 option('SCALAPACK_ROOT', type : 'string', description : 'root directory of SCALAPACK')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
-option('NP', type: 'integer', description: 'manually set number of MPI processes', min: 2, value: 2)
+option('NP', type: 'string', description: 'manually set number of MPI processes')
