azure-pipelines.yml from master: rebase complete

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,20 @@
 jobs:
-- job: UbuntuLatest
+- job: UbuntuCMake
   pool:
     vmImage: 'ubuntu-latest'
 
-
   steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.6'
+      addToPath: true
   - script: |
       sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
       sudo apt update -q
-      sudo apt install -yq --no-install-recommends gfortran-6 liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev octave
+      sudo apt install -yq --no-install-recommends gfortran-6 liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev
     displayName: 'Install Linux prereqs'
+  - script: python -m pip install -e $(Build.SourcesDirectory)[tests]
+    displayName: 'Install Python dev'
   - script: |
       cmake --version
       cd $BUILD_DIR
@@ -23,3 +28,44 @@ jobs:
   - script: ctest -R 2D --parallel --output-on-failure
     workingDirectory: $(Build.BinariesDirectory)
     displayName: 'CTest: 2D'
+
+- job: UbuntuMeson
+  pool:
+    vmImage: 'ubuntu-latest'
+
+  steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.6'
+      addToPath: true
+  - script: |
+      sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+      sudo apt update -q
+      sudo apt install -yq --no-install-recommends gfortran-6 liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev
+    displayName: 'Install Linux prereqs'
+  - script: |
+      git clone https://github.com/mesonbuild/meson ../meson
+      python -m pip install -e ../meson
+      curl -Ls https://github.com/ninja-build/ninja/releases/download/v1.9.0/ninja-linux.zip -o ninja-linux.zip
+      sudo unzip ninja-linux.zip -d /usr/local/bin/
+    displayName: 'setup Meson'
+  - script: python -m pip install -e $(Build.SourcesDirectory)[tests]
+    displayName: 'Install Python dev'
+  - script: |
+      meson setup $BUILD_DIR $SRC_DIR
+      meson test -C $BUILD_DIR --suite unit
+      meson test -C $BUILD_DIR --suite 2d
+    env:
+      SRC_DIR: $(Build.SourcesDirectory)
+      BUILD_DIR: $(Build.BinariesDirectory)
+      FC: gfortran-6
+    displayName: 'Build and test'
+  - publish: $(Build.BinariesDirectory)/meson-logs/testlog.txt
+    condition: succeededOrFailed()
+    artifact: TestLog
+
+
+#    - brew install gcc
+#    - brew install lapack openblas open-mpi scalapack
+#    - brew tap dpo/openblas
+#    - brew install mumps
