Meson: build non-glow and glow if glow requested

--- a/ionization/meson.build
+++ b/ionization/meson.build
@@ -1,18 +1,19 @@
 ionization_src = files('ionization.f90', 'boundary_conditions/precipBCs_mod.f90')
 
+ionization = library('ionization', ionization_src, 'glow_dummy.f90',
+  link_with: [io, const, calculus, grid, neutral, timeutils, mpimod],
+  dependencies : mpi)
+
+# ===== optional GLOW library
+
 if use_glow
-  ionization_src += 'glow_run.F90'
   glow_proj = subproject('cglow')
-  cglow = glow_proj.get_variable('cglow')
-  ionization_deps = cglow
-else
-  ionization_src += 'glow_dummy.f90'
-  ionization_deps = []
+  glow_lib = glow_proj.get_variable('cglow')
+
+  data_dir = 'subprojects/glow/data/' # need trailing slash
+
+  ionization_glow = library('ionization_glow', ionization_src, 'glow_run.F90',
+    link_with: [glow_lib, io, const, calculus, grid, neutral, timeutils, mpimod],
+    dependencies : mpi,
+    fortran_args: '-DDATADIR="'+data_dir+'"')
 endif
-
-data_dir = 'subprojects/glow/data/' # need trailing slash
-
-ionization = library('ionization', ionization_src,
-  link_with: [ionization_deps, io, const, calculus, grid, neutral, timeutils, mpimod],
-  dependencies : mpi,
-  fortran_args: '-DDATADIR="'+data_dir+'"')
